<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/AppBar"
        layout="@layout/layout_app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/AppBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardLiveSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_summary_card"
                android:layout_margin="16dp"
                android:padding="24dp"
                app:layout_constraintTop_toTopOf="parent"
                >

                <TextView
                    android:id="@+id/tvTitleLiveSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/live_summary"
                    android:textSize="11sp"
                    style="@style/AppText.CardLight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tvPercentageLiveSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/percentage_format"
                    android:background="@drawable/bg_percentage_badge"
                    style="@style/AppText.CardLight"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/tvIDRLiveSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idr_currency_format"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    style="@style/AppText.CardLight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleLiveSummary"
                    />

                <View
                    android:id="@+id/dividerLiveSummary"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="11dp"
                    android:background="@color/black_50"
                    app:layout_constraintTop_toBottomOf="@id/tvIDRLiveSummary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/tvTodaysTotalSales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/todays_total_sales"
                    android:textStyle="bold"
                    style="@style/AppText.CardLight"
                    app:layout_constraintTop_toBottomOf="@id/dividerLiveSummary"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_details"
                    android:textStyle="bold"
                    style="@style/AppButton.ViewDetails"
                    app:layout_constraintTop_toTopOf="@id/tvTodaysTotalSales"
                    app:layout_constraintBottom_toBottomOf="@id/tvTodaysTotalSales"
                    app:layout_constraintEnd_toEndOf="parent"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                android:id="@+id/titleSectionQuickActions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                layout="@layout/view_section_title"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/cardLiveSummary"
                app:layout_constraintStart_toStartOf="@id/cardLiveSummary"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <include
                android:id="@+id/actionNewSale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                layout="@layout/item_quick_action_card"
                app:layout_constraintTop_toBottomOf="@id/titleSectionQuickActions"
                app:layout_constraintStart_toStartOf="@id/titleSectionQuickActions"
                app:layout_constraintEnd_toStartOf="@id/actionStocks"
                />

            <include
                android:id="@+id/actionStocks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                layout="@layout/item_quick_action_card"
                app:layout_constraintTop_toTopOf="@id/actionNewSale"
                app:layout_constraintBottom_toBottomOf="@id/actionNewSale"
                app:layout_constraintStart_toEndOf="@id/actionNewSale"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <include
                android:id="@+id/actionRefunds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                layout="@layout/item_quick_action_card"
                app:layout_constraintTop_toBottomOf="@id/actionNewSale"
                app:layout_constraintStart_toStartOf="@id/actionNewSale"
                app:layout_constraintEnd_toEndOf="@id/actionNewSale"
                />

            <include
                android:id="@+id/actionReports"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                layout="@layout/item_quick_action_card"
                app:layout_constraintTop_toTopOf="@id/actionRefunds"
                app:layout_constraintStart_toStartOf="@id/actionStocks"
                app:layout_constraintEnd_toEndOf="@id/actionStocks"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
        

        
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>